Adding category api and improvements
