# storage/api-docs/api-docs.json
@@ -355,6 +355,68 @@
                 }
             }
         },
+        "/api/categories/{company_id}": {
+            "get": {
+                "tags": [
+                    "Category"
+                ],
+                "summary": "All categories",
+                "description": "All categories",
+                "operationId": "all_categories",
+                "parameters": [
+                    {
+                        "name": "company_id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "id": {
+                                            "type": "number",
+                                            "example": 1
+                                        },
+                                        "name": {
+                                            "type": "string",
+                                            "example": ""
+                                        },
+                                        "icon": {
+                                            "type": "string",
+                                            "example": ""
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "NOT FOUND",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": ""
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/test": {
             "get": {
                 "tags": [
@@ -431,6 +493,10 @@
         {
             "name": "Auth",
             "description": "API Endpoints de Autenticación"
+        },
+        {
+            "name": "Category",
+            "description": "Category"
         },
         {
             "name": "Test",
